--- a/manual/SerenityUserManual.bib
+++ b/manual/SerenityUserManual.bib
@@ -567,3 +567,26 @@ doi = {10.1063/1.1676210},
   doi       = {10.1021/ja061798a},
   publisher = {American Chemical Society ({ACS})},
 }
+@article{Gilbert2008,
+	author = {Gilbert, Andrew T. B. and Besley, Nicholas A. and Gill, Peter M. W.},
+	journal = {J. Phys. Chem. A},
+	title = {Self-{Consistent} {Field} {Calculations} of {Excited} {States} {Using} the {Maximum} {Overlap} {Method} ({MOM})},
+	year = {2008},
+	month = {dec},
+	number = {50},
+	pages = {13164--13171},
+	volume = {112},
+	doi = {10.1021/jp801738f},
+}
+
+@article{Barca2018,
+	author = {Barca, Giuseppe M. J. and Gilbert, Andrew T. B. and Gill, Peter M. W.},
+	journal = {J. Chem. Theory Comput.},
+	title = {Simple {Models} for {Difficult} {Electronic} {Excitations}},
+	year = {2018},
+	month = {mar},
+	number = {3},
+	pages = {1501--1509},
+	volume = {14},
+	doi = {10.1021/acs.jctc.7b00994},
+}
