--- a/manual/SerenityUserManual.bib
+++ b/manual/SerenityUserManual.bib
@@ -13,6 +13,47 @@
   language = {en},
   number = {19}
 }
+@misc{Libint2.7.0,
+  title={{Libint: A library for the evaluation of molecular integrals of 
+          many-body operators over Gaussian functions}},
+  author={Valeev, Edward F and Fermann, JT},
+  howpublished={https://github.com/evaleev/libint},
+  year={2020},
+  note={version 2.7.0-beta6}
+}
+@software{XCFun2.0.2,
+  author       = {Ekstr{\"o}m, Ulf},
+  title        = {{XCFun: A library of exchange-correlation 
+                    functionals with arbitrary-order derivatives}},
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {v2.0.2},
+  doi          = {10.5281/zenodo.3946698},
+  url          = {https://doi.org/10.5281/zenodo.3946698}
+}
+@article{Libxc,
+  title={{Recent developments in libxc—A comprehensive library of functionals
+        for density functional theory}},
+  author={Lehtola, Susi and Steigemann, Conrad and Oliveira, Micael JT
+          and Marques, Miguel AL},
+  journal={SoftwareX},
+  volume={7},
+  pages={1--5},
+  year={2018},
+  publisher={Elsevier}
+}
+@article{Libecpint,
+  author = {Shaw, Robert A. and Hill, J. Grant},
+  doi = {10.1063/1.4986887},
+  issn = {0021-9606},
+  journal = {J. Chem. Phys.},
+  pages = {074108},
+  title = {{Prescreening and efficiency in the evaluation of integrals
+  over ab initio effective core potentials}},
+  url = {http://aip.scitation.org/doi/10.1063/1.4986887},
+  volume = {147},
+  year = {2017}
+}
 @article{soda2000,
   title = {Ab Initio Computations of Effective Exchange Integrals for {{H}}\textendash{{H}}, {{H}}\textendash{{He}}\textendash{{H}} and {{Mn2O2}} Complex: Comparison of Broken-Symmetry Approaches},
   shorttitle = {Ab Initio Computations of Effective Exchange Integrals for {{H}}\textendash{{H}}, {{H}}\textendash{{He}}\textendash{{H}} and {{Mn2O2}} Complex},
